# IWMTEngine

./: .gitignore  CMakeLists.txt
src/: GeneratedReflectionData.cpp  GeneratedSerializationData.h  Globals.h  main.cpp
src/Assets/: AssetLoader.cpp  AssetLoader.h  AssetProcessor.cpp  AssetProcessor.h
src/Benchmarking/: Benchmark.cpp  Benchmark.h
src/Config/: EngineConfig.h
src/Console/: EngineConsole.cpp  EngineConsole.h
src/Editor/: Editor.cpp  Editor.h  ImGuiClasses.h  ImGuiHelpers.h
src/Engine/: Engine.cpp  Engine.h  EngineEvents.cpp  EngineGameLoop.cpp  EngineInit.cpp  EnginePhysics.cpp  EngineReflection.cpp  GameObject.cpp  GameObject.h  Globals.cpp
src/Events/: EventHandler.cpp  EventHandler.h
src/Level/: Level.cpp  Level.h  TestBed.cpp  TestBed.h
src/Level/LightMeUp/: BaseLightPlayerWrapper.cpp  BaseLightPlayerWrapper.h  Choreography.cpp  Choreography.h  DataPlayerWrapper.cpp  DataPlayerWrapper.h  Light.h  LightMeUpLevel.cpp  LightMeUpLevel.h  LightMeUpLevelEditor.cpp  LightVisual.cpp  LightVisual.h  PatternDefinitions.h  PatternPlayer.cpp  PatternPlayer.h  PatternPlayerAdapter.cpp  PatternPlayerAdapter.h  PulsePlayerWrapper.cpp  PulsePlayerWrapper.h  StarrySky.cpp  StarrySky.h  WavePlayerWrapper.cpp  WavePlayerWrapper.h  WavePlayerWrapperEditor.cpp
src/Level/LightMeUp/ArduinoSim/: DataPlayer.h  LightPlayer2.h  PlayerFuncs.h  blueGuy_a16color16x16_data.txt
src/Level/LightMeUp/Light_types/: CRGB_Player.cpp  CRGB_Player.h  DataPlayer.h  Light.h  LightMover.cpp  LightMover.h  LightPlayer.cpp  LightPlayer.h  LightPlayer2.cpp  LightPlayer2.h  LightPlayer2Editors.cpp  LightPlayer4.cpp  LightPlayer4.h  PlayerFuncs.cpp  PulsePlayer.cpp  PulsePlayer.h  WavePlayer.cpp  WavePlayer.h  WavePlayer2.cpp  WavePlayer2.h
src/Level/LightMeUp/ThreadTasks/: WaveConfigLoaderTask.cpp  WaveConfigLoaderTask.h
src/Level/LightMeUp/utility/: myLight.h  (+19 more)
src/Level/Tarmie/: Block.cpp  Block.h  TarmieLevel.cpp  TarmieLevel.h
src/Level/TestBed/: SpriteSheet.cpp  SpriteSheet.h
src/Logging/: LogFormatting.h  Logging.h
src/Misc/: IniConfig.cpp  IniConfig.h  UI.h
src/MultiThreading/: ThreadSafeQueue.h  WorkerThread.cpp  WorkerThread.h
src/MultiThreading/Tasks/: .gitignore  FileIndexTask.cpp  FileIndexTask.h  LevelMakerTask.cpp  LevelMakerTask.h
src/Physics/: Physics.cpp  Physics.h  arcSeg.h  ball.h  ball_go.h  block.h  decayPolygon.h  expandPolygon.h  lineBumper.h  lineSeg.h  lineSegConveyor.h  lineSegElevator.h  lineSegFlip.h  lineSegRotate.h  lineSegSwing.h  mvHit.h  rec.cpp  regPolygon.h  segHit.h  vec2d.h  waveSeg.h
src/Reflection/: GenReflection.h  Reflection.h
src/Serialization/: SerializeTypes.h
src/Timing/: RealTimeClock.h  Timer.h  TimerManager.cpp  TimerManager.h
src/Utility/: MemUtils.h  Utils.h
src/scripts/: patch-asset.py
src/scripts/codegen/: common.py  gen-all.py  gen-refl.py  reflection.py  reflection_utils.py  serialization.py
(+12 files in other folders)
